--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,17 @@
 inc:
   # Blog Information
-  title:        "Jekyll Incorporated"
-  subtitle:     "Modern Jekyll based blog for companies"
+  title:        "Coveo R&D Blog"
+  subtitle:     "What should I put here?"
   cover_image:  blog-cover.jpg
   logo:         logo.png
   
   # Company information
-  company:      Incorporated
-  url:          http://sendtoinc.com/
-  facebook:     sendtoinc
-  twitter:      sendtoinc
+  company:      Coveo
+  url:          http://www.coveo.com/
+  #facebook:     sendtoinc
+  twitter:      coveoquebec
   gplus:        '101183822199340201470'
-  about_link:   https://sendtoinc.com/about/
-  
-  # Product Information
-  product_link: http://incorporated.sendtoinc.com/
-  tagline:      "Get a modern blog for your company"
-  
+
   # Comments
   disqus:
     # Eg. "exampleblog" Set to false to disable comments
@@ -41,7 +36,7 @@ inc:
   
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://incorporated.sendtoinc.com
+url:         http://source.coveo.com
 source:      .
 destination: ./_site
 plugins:     ./_plugins
@@ -62,7 +57,7 @@ permalink:     pretty
 paginate_path: 'page:num'
 paginate: 10
 
-markdown:      maruku
+markdown:      kramdown
 markdown_ext:  markdown,mkd,mkdn,md
 textile_ext:   textile
 
@@ -73,13 +68,6 @@ host:        0.0.0.0
 port:        4000
 baseurl:     /
 lsi:         false
-
-maruku:
-  use_tex:    false
-  use_divs:   false
-  png_engine: blahtex
-  png_dir:    images/latex
-  png_url:    /images/latex
 
 rdiscount:
   extensions: []
