More base url fixes, plus Disqus comments.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ inc:
   # Comments
   disqus:
     # Eg. "exampleblog" Set to false to disable comments
-    shortname:  false
+    shortname:  coveordblog
   
   # Sharing settings
   sharing:
