--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 inc:
   # Blog Information
-  title:        "Coveo R&D Blog"
+  title:        "Coveo Source"
   subtitle:     "What should I put here?"
   cover_image:  blog-cover.jpg
   logo:         logo.png
