no twitter for now

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ inc:
   company:      Coveo
   url:          http://www.coveo.com/
   #facebook:     sendtoinc
-  twitter:      coveoquebec
+  #twitter:      coveoquebec
   #gplus:        '101183822199340201470'
 
   # Comments
