--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ inc:
  # Analytics     
   analytics:
     google: true
-    coveo: 
-      token: TODO_GSIMARD
+    coveo: true
       
       
   # Google Fonts
