--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ excerpt_separator: "<!-- more -->"
 safe:        false
 host:        0.0.0.0
 port:        4000
+baseurl:     http://source.coveo.com
 lsi:         false
 
 rdiscount:
