--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,16 @@ inc:
   subtitle:     "A technical blog by the fine people at Coveo"
   cover_image:  blog-cover.jpg
   logo:         logo.png
-  
+
   # Company information
   company:      Coveo
   url:          http://www.coveo.com/
-  #facebook:     sendtoinc
   twitter:      coveodev
-  #gplus:        '101183822199340201470'
 
   # Comments
   disqus:
-    # Eg. "exampleblog" Set to false to disable comments
-    shortname:  coveordblog
-  
+    shortname:  coveordblog #false to disable
+
   # Sharing settings
   sharing:
     twitter:    true
@@ -24,32 +21,24 @@ inc:
     gplus:      false
     hn:         false
     foursquare: false
-    
-  
- # Analytics     
+
+
+ # Analytics
   analytics:
     google: true
     coveo: true
-      
-      
+
   # Google Fonts
   # eg. 'Droid+Sans:400,700|Droid+Serif:400,700'
   google_font: 'Droid+Sans:400,700'
-  
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://source.coveo.com
 source:      .
 destination: ./_site
 layouts:     ./_layouts
-include:     ['.htaccess']
-exclude:     []
-timezone:    nil
 
 # Show future posts
 future:      false
-show_drafts: false
-limit_posts: 0
 highlighter: pygments
 
 relative_permalinks: true
@@ -64,33 +53,5 @@ textile_ext:   textile
 
 excerpt_separator: "<!-- more -->"
 
-safe:        false
 host:        0.0.0.0
 port:        4000
-baseurl:     http://source.coveo.com
-lsi:         false
-
-rdiscount:
-  extensions: []
-
-redcarpet:
-  extensions: []
-
-kramdown:
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  use_coderay: false
-
-  coderay:
-    coderay_wrap: div
-    coderay_line_numbers: inline
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: style
-
-redcloth:
-  hard_breaks: true
