--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,17 @@
+source:      .
+destination: ./_site
+layouts_dir: ./_layouts
+
+baseurl: ""
+
+future:      false
+
+permalink:     pretty
+paginate_path: 'page:num'
+paginate: 10
+
+excerpt_separator: "<!-- more -->"
+
 inc:
   # Blog Information
   title:        "Source @ Coveo"
@@ -28,29 +42,6 @@ inc:
     google: true
     coveo: true
 
-  # Google Fonts
-  # eg. 'Droid+Sans:400,700|Droid+Serif:400,700'
   google_font: 'Droid+Sans:400,700'
-  # Setup your fonts, colors etc at _assets/stylesheets/main.scss
-
-source:      .
-destination: ./_site
-layouts_dir: ./_layouts
-
-base_url: ""
-url: http://source.coveo.com
-
-# Show future posts
-future:      false
-highlighter: pygments
-
-permalink:     pretty
-paginate_path: 'page:num'
-paginate: 10
-
-excerpt_separator: "<!-- more -->"
-
-host:        127.0.0.1
-port:        4000
 
 gems: [jekyll-paginate]
