--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ inc:
     google: true
     coveo: true
 
-  google_font: 'Droid+Sans:400,700'
+  google_font: 'Lato:300,400,700'
 
-gems: 
+gems:
     - jekyll-paginate
     - jekyll-sitemap
 exclude: ['Gemfile', 'Gemfile.lock']
