Use a squared image for the Coveo Logo to improve how it looks when linked in Slack, Twitter and Facebook.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ inc:
   title:        "Source @ Coveo"
   subtitle:     "A technical blog by the fine people at Coveo"
   cover_image:  blog-cover.jpg
-  logo:         logo.png
+  logo:         logo2.png
 
   # Company information
   company:      Coveo
